Opción de añadir y quitar imagenes asociadas a un trabajo (falta por revisar que no deje eliminar todos los inputs)

--- a/module/AmJob/view/am-job/am-job-module/form-partial/image-url.phtml
+++ b/module/AmJob/view/am-job/am-job-module/form-partial/image-url.phtml
@@ -27,6 +27,7 @@ if (count($imagesUrl)) {
 
         $element->setAttribute('id',$id.$index);
         $element->setAttribute('data-id',$id);
+        $element->setAttribute('data-index',$index);
 
         $html .= sprintf($row,$formInput->render($element));
     }
