--- a/public/absconsultor/css/absconsultor.css
+++ b/public/absconsultor/css/absconsultor.css
@@ -211,6 +211,10 @@ footer .footer-nav a{
     padding-bottom: 80px;
 }
 
+.abs .container.detail .item img {
+    margin: 0 auto;
+}
+
 footer {
     color: white;
     padding-top: 20px;
