--- a/data/module/Application/view/application/contact/index.phtml
+++ b/data/module/Application/view/application/contact/index.phtml
@@ -17,7 +17,7 @@ $contact = $menu->rows['contact']->id;
                 <h1><?=$menu->locale->{$lang}[$contact]->name?></h1>
 
                 <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-md-6 col-sm-6 col-xs-12">
                         <form role="form">
                             <div class="form-group">
                                 <label for="name"><?=$this->translate('Form Name','frontend');?></label>
@@ -42,7 +42,7 @@ $contact = $menu->rows['contact']->id;
                             <button type="submit" class="btn btn-default"><?=$this->translate('Form Send','frontend');?></button>
                         </form>
                     </div>
-                    <div class="col-md-6 contact-info">
+                    <div class="col-md-6 col-sm-6 col-xs-12 contact-info">
                         <div class="row">
                             <div class="col-md-12">
 
