--- a/data/module/Application/view/application/home/index.phtml
+++ b/data/module/Application/view/application/home/index.phtml
@@ -16,7 +16,7 @@ $this->headLink()->appendStylesheet($this->basePath('absconsultor/css/home.css')
             <?=$menuHelper->render($menu,$lang);?>
         </ul>
 
-        <div class="col-xs-12 hidden-sm hidden-xs">
+        <div class="hidden-sm hidden-xs chevron">
             <i class="fa fa-chevron-down transition"></i>
         </div>
     </div>
