--- a/html/absconsultor/css/home.css
+++ b/html/absconsultor/css/home.css
@@ -28,7 +28,7 @@
 }
 
 .abs .video-wrapper video {
-    margin-top: -150px;
+    /*margin-top: -100px;*/
 }
 
 @media (max-width: 767px) {
@@ -43,7 +43,11 @@
     top: 70%;
     left: 50%;
     padding:0;
-    margin-left: -172.5px;
+    -webkit-transform: translate(-50%,0);
+    -moz-transform: translate(-50%,0);
+    -ms-transform: translate(-50%,0);
+    -o-transform: translate(-50%,0);
+    transform: translate(-50%,0);
 }
 
 .abs .home .nav.navbar-nav.header {
@@ -53,21 +57,25 @@
 .abs .home .brand-logo {
     position:  absolute;
     max-width: 500px;
-    width: 34%;
-    top: 50%;
+    width: 44%;
+    top: 40%;
     left: 50%;
+    -webkit-transform: translate(-50%,-50%);
+    -moz-transform: translate(-50%,-50%);
+    -ms-transform: translate(-50%,-50%);
+    -o-transform: translate(-50%,-50%);
+    transform: translate(-50%,-50%);
 }
 
 .abs .home .brand-logo.header {
     opacity: 0;
 }
 
-.abs .home .fa-chevron-down {
+.abs .home .chevron {
     position: absolute;
     bottom: 40px;
     color: white;
     font-size: 40px;
-    text-align: center;
     left: 50%;
     margin-left: -15px;
     margin-right: -15px;
@@ -83,12 +91,12 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 51, 78, 0.5);
+    background-color: rgba(0, 51, 78, 0.3);
 }
 
 .abs .video-filter .video-controls {
     position: absolute;
-    bottom: 10px;
+    top: 10px;
     right: 20px;
     font-size: 4em;
     color: white;
@@ -283,6 +291,6 @@ nav.navbar-fixed-top.visible {
     }
 
     .home .bx-wrapper {
-        padding-top: 50px;
+        /*padding-top: 50px;*/
     }
 }
