--- a/data/module/AmJob/view/am-job/am-job-module/form-partial/image-url.phtml
+++ b/data/module/AmJob/view/am-job/am-job-module/form-partial/image-url.phtml
@@ -20,19 +20,20 @@ $element->setAttribute('data-is-multiple','1');
 $row = "<div class = 'form-group'><div class='col-xs-12'>%s</div></div>";
 
 $id = $element->getAttribute('id');
-
+$element->setAttribute('data-id',$id);
 if (count($imagesUrl)) {
     foreach ($imagesUrl as $index => $url) {
         $element->setValue($url);
 
         $element->setAttribute('id',$id.$index);
-        $element->setAttribute('data-id',$id);
         $element->setAttribute('data-index',$index);
 
         $html .= sprintf($row,$formInput->render($element));
     }
 } else {
     $element->setValue('');
+    $element->setAttribute('id',$id."0");
+    $element->setAttribute('data-index',"0");
     $html .= sprintf($row,$formInput->render($element));
 }
 
