--- a/html/absconsultor/css/home.css
+++ b/html/absconsultor/css/home.css
@@ -25,15 +25,26 @@
 .abs .video-wrapper {
     position: relative;
     overflow: hidden;
+    background-image: url(../../img/footer-background-logo.png);
+    background-repeat: repeat;
+    background-position: -128px -129px;
+    background-size: contain;
+    background-color: rgba(0, 52, 79, 0.5);
 }
 
 .abs .video-wrapper video {
-    /*margin-top: -100px;*/
+    margin: 0 auto;
+    display: block;
+    width: 100%;
+    -webkit-box-shadow: 0px 3px 15px 6px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 3px 15px 6px rgba(0,0,0,0.75);
+    box-shadow: 0px 3px 15px 6px rgba(0,0,0,0.75);
 }
 
-@media (max-width: 767px) {
+@media (min-width: 1025px) {
     .abs .video-wrapper video {
-        margin-top: -0px;
+        width: 71%;
+        max-width: 1170px;
     }
 }
 
@@ -57,7 +68,7 @@
 .abs .home .brand-logo {
     position:  absolute;
     max-width: 500px;
-    width: 44%;
+    width: 34%;
     top: 40%;
     left: 50%;
     -webkit-transform: translate(-50%,-50%);
