Eliminando clases del módulo AmMedia que no usamos. Pequeña refactorización de la gestión de Medias. Ahora, los archivos que se den de alta desde el CKEditor se guardarán en una carpeta independiente. Esto nos hará más facil la tarea de saber qué contenido está enlazado desde fuera y qué contenido está dentro de algún campo de tipo "content"

--- a/data/module/Administrator/view/layout/admin-layout.phtml
+++ b/data/module/Administrator/view/layout/admin-layout.phtml
@@ -40,7 +40,7 @@ $basePath = $this->basePath() . '/administrator';
         <!-- Logo -->
         <a href="<?php echo $this->url('administrator',array('module' => 'home')) ?>" class="logo">
             <!-- mini logo for sidebar mini 50x50 pixels -->
-             <img height="35" src="/img/white-logo-horizontal.png"/>
+             <!--<img height="35" src="/img/white-logo-horizontal.png"/>-->
             <!--<span class="logo-mini"><?php /*echo $settings->nameClient;*/?></span>-->
             <span class="logo-mini"><!--ABS Consultor--></span>
             <!-- logo for regular state and mobile devices -->
