--- a/data/module/Administrator/view/administrator/edit.phtml
+++ b/data/module/Administrator/view/administrator/edit.phtml
@@ -18,6 +18,9 @@ $form->prepare();
         <div class="box box-primary">
             <div class="box-header with-border">
                 <h3 class="box-title"><?php echo $this->escapeHtml($title); ?></h3>
+                <?php if (isset($add_action)):?>
+                    <a class="pull-right btn btn-app" href="<?=$add_action?>"><i class="fa fa-plus"></i>Nuevo</a>
+                <?php endif;?>
             </div>
             <?php
             echo $this->form()->openTag($form);
