--- a/html/absconsultor/css/home.css
+++ b/html/absconsultor/css/home.css
@@ -30,12 +30,16 @@
     background-position: -128px -129px;
     background-size: contain;
     background-color: rgba(0, 52, 79, 0.5);
+    height: auto;
+    width: 100%;
+    display: block;
 }
 
 .abs .video-wrapper video {
     margin: 0 auto;
     display: block;
     width: 100%;
+    overflow: hidden;
     -webkit-box-shadow: 0px 3px 15px 6px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 3px 15px 6px rgba(0,0,0,0.75);
     box-shadow: 0px 3px 15px 6px rgba(0,0,0,0.75);
@@ -48,6 +52,39 @@
     }
 }
 
+.abs .video-filter {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height:100%;
+    overflow: hidden;
+    display: block;
+    background-color: rgba(0, 51, 78, 0.3);
+}
+
+@media (max-width: 767px) {
+    .abs .video-filter {
+        background-color: rgba(0, 51, 78, 0);
+    }
+}
+
+
+.abs .video-controls {
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    font-size: 4em;
+    color: white;
+    z-index: 999;
+    cursor: pointer;
+}
+
+@media (max-width: 767px) {
+    .abs .video-controls {
+        font-size: 2em;
+    }
+}
 
 .abs .home .nav.navbar-nav{
     position: absolute;
@@ -94,38 +131,6 @@
 
 .abs .home .fa-chevron-down.header {
     opacity: 0;
-}
-
-.abs .video-filter {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 51, 78, 0.3);
-}
-
-@media (max-width: 767px) {
-    .abs .video-filter {
-        background-color: rgba(0, 51, 78, 0);
-    }
-}
-
-
-.abs .video-filter .video-controls {
-    position: absolute;
-    top: 10px;
-    right: 20px;
-    font-size: 4em;
-    color: white;
-    z-index: 999;
-    cursor: pointer;
-}
-
-@media (max-width: 767px) {
-    .abs .video-filter .video-controls {
-        font-size: 2em;
-    }
 }
 
 .abs .home-module {
