--- a/data/module/Application/view/application/job/detail.phtml
+++ b/data/module/Application/view/application/job/detail.phtml
@@ -1,3 +1,23 @@
+<style>
+    .video-controls {
+        position: absolute;
+        bottom: 5px;
+        width: 100%;
+        right:0;
+        color: white;
+        font-size: 25px;
+        background: url(../../../../img/black-0.5.png) repeat;
+        padding: 10px;
+    }
+
+    .video-controls i {
+        cursor: pointer;
+    }
+
+    .video-controls.hide-control{
+        right: -100%;
+    }
+</style>
 <?php
 $jobMenuId         = $menu->rows['jobs']->id;
 $images = json_decode($job->imageUrl);
