Gestión de medias. Volvemos a tener una sola carpeta para todos los archivos. Retoques en la sección de trabajos y blog Ordenando los megabanners por el campo "order". Las imágenes y videos que se añadan "inline" desde el CKEditor, tendrán una clase que se añade de forma automática que se llama "inline-element"

--- a/data/module/Application/view/application/blog/index.phtml
+++ b/data/module/Application/view/application/blog/index.phtml
@@ -24,7 +24,20 @@ $blogCategoryHelper = $this->blogCategoryHelper();
         <div class="row">
             <div class="col-md-9">
 
-                <h1><?=$menu->locale->{$lang}[$blogMenuId]->name?></h1>
+                <header>
+                    <h1><?=$menu->locale->{$lang}[$blogMenuId]->name?></h1>
+                    <?php if(isset($currentCategory)):?>
+                        <h2><?=$currentCategory['title']?></h2>
+                    <?php endif?>
+                </header>
+
+                <?php if(isset($currentCategory)):?>
+                    <div class="row">
+                        <div class="col-xs-12">
+                            <?=$currentCategory['content'];?>
+                        </div>
+                    </div>
+                <?php endif?>
 
                 <div class="row">
                     <?php $blogHelper->render($lang, $blogs);?>
