--- a/html/absconsultor/css/home.css
+++ b/html/absconsultor/css/home.css
@@ -29,7 +29,7 @@
     background-repeat: repeat;
     background-position: -128px -129px;
     background-size: contain;
-    background-color: rgba(0, 52, 79, 0.5);
+    background-color: rgb(0, 52, 79);
     height: auto;
     width: 100%;
     display: block;
@@ -47,7 +47,7 @@
 
 @media (min-width: 1025px) {
     .abs .video-wrapper video {
-        width: 71%;
+        width: 86%;
         max-width: 1170px;
     }
 }
