--- a/data/module/Application/view/application/job/detail.phtml
+++ b/data/module/Application/view/application/job/detail.phtml
@@ -1,23 +1,3 @@
-<style>
-    .video-controls {
-        position: absolute;
-        bottom: 5px;
-        width: 100%;
-        right:0;
-        color: white;
-        font-size: 25px;
-        background: url(../../../../img/black-0.5.png) repeat;
-        padding: 10px;
-    }
-
-    .video-controls i {
-        cursor: pointer;
-    }
-
-    .video-controls.hide-control{
-        right: -100%;
-    }
-</style>
 <?php
 $jobMenuId         = $menu->rows['jobs']->id;
 $images = json_decode($job->imageUrl);
@@ -40,8 +20,10 @@ $carouselHelper = $this->carouselItemHelper();
             <div class="col-md-12">
                 <h1><?=$job->title;?></h1>
                 <?=$job->content;?>
-                <div id="owl_carousel">
-                    <?php echo $carouselHelper->render($images)?>
+                <div class="wrapper">
+                    <div class="masonry bordered">
+                        <?php echo $carouselHelper->render($images)?>
+                    </div>
                 </div>
             </div>
         </div>
