Creando el manual en el módulo de home

--- a/html/absconsultor/css/masonry.css
+++ b/html/absconsultor/css/masonry.css
@@ -27,7 +27,7 @@
     transition: all .5s ease-in-out;
 }
 .masonry .brick:hover img {
-    /*opacity: .75;*/
+    cursor: pointer;
 }
 .masonry.bordered {
     -moz-column-rule: 1px solid #337ab7;
