--- a/data/module/Administrator/view/layout/admin-layout.phtml
+++ b/data/module/Administrator/view/layout/admin-layout.phtml
@@ -17,7 +17,7 @@ $basePath = $this->basePath() . '/administrator';
     ?>
 
     <!-- Le styles -->
-    <?php echo $this->headLink(array('rel' => 'shortcut icon', 'type' => 'image/vnd.microsoft.icon', 'href' => $basePath . '/img/favicon.ico'))
+    <?php echo $this->headLink(array('rel' => 'shortcut icon', 'type' => 'image/vnd.microsoft.icon', 'href' => $this->basePath() . '/img/favicon.jpg'))
 
         ->prependStylesheet($basePath . '/css/style.css')
         ->prependStylesheet($basePath . '/libs/RichFilemanager/themes/administrator/styles/filemanager.css')
@@ -40,7 +40,7 @@ $basePath = $this->basePath() . '/administrator';
         <!-- Logo -->
         <a href="<?php echo $this->url('administrator',array('module' => 'home')) ?>" class="logo">
             <!-- mini logo for sidebar mini 50x50 pixels -->
-             <!--<img height="35" src="/img/white-logo-horizontal.png"/>-->
+             <img height="35" src="/img/white-logo-horizontal.png"/>
             <!--<span class="logo-mini"><?php /*echo $settings->nameClient;*/?></span>-->
             <span class="logo-mini"><!--ABS Consultor--></span>
             <!-- logo for regular state and mobile devices -->
