--- a/html/administrator/css/style.css
+++ b/html/administrator/css/style.css
@@ -103,3 +103,7 @@ LANGUAGE TABS
     box-shadow: 0px 1px 5px 0px #656565;
     filter:progid:DXImageTransform.Microsoft.Shadow(color=#656565, Direction=180, Strength=5);
 }
+
+.home-background {
+    background: url('../../img/footer-background-logo.png') no-repeat;
+}
