oculto el enlace de "recordar contraseña"

--- a/data/module/AmLogin/view/am-login/am-login-module/index.phtml
+++ b/data/module/AmLogin/view/am-login/am-login-module/index.phtml
@@ -33,7 +33,7 @@ if(isset($userFound)):
     </div>
     <div class="row">
         <div class="col-xs-12">
-            <a href="/login/remember-password">¿Olvidó su contraseña?</a>
+            <!--<a href="/login/remember-password">¿Olvidó su contraseña?</a>-->
         </div>
     </div>
     <?php if ($this->flashMessenger()->hasMessages()) :
